// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch.svelte > should render default 1`] = `
<div>
  <!---->
  <toggle-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="flex items-center is-off"
    role="listbox"
    tabindex="0"
  >
    <item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </item>
    <item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </item>
    
  </toggle-switch>
  
  
</div>
`;

exports[`Switch.svelte > should render default 2`] = `
<div>
  <!---->
  <toggle-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="flex items-center is-on"
    role="listbox"
    tabindex="0"
  >
    <item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </item>
    <item
      aria-selected="true"
      class="relative"
      data-path="1"
      role="option"
    >
      <indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </item>
    
  </toggle-switch>
  
  
</div>
`;

exports[`Switch.svelte > should render default 3`] = `
<div>
  <!---->
  <toggle-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="flex items-center is-off"
    role="listbox"
    tabindex="0"
  >
    <item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </item>
    <item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </item>
    
  </toggle-switch>
  
  
</div>
`;

exports[`Switch.svelte > should render text array 1`] = `
<div>
  <!---->
  <toggle-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="flex items-center "
    role="listbox"
    tabindex="0"
  >
    <item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        a
      </p>
      <!---->
      
      <!---->
    </item>
    <item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        b
      </p>
      <!---->
      
      <!---->
    </item>
    
  </toggle-switch>
  
  
</div>
`;

exports[`Switch.svelte > should render text array 2`] = `
<div>
  <!---->
  <toggle-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="flex items-center "
    role="listbox"
    tabindex="0"
  >
    <item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        a
      </p>
      <!---->
      
      <!---->
    </item>
    <item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        b
      </p>
      <!---->
      
      <!---->
    </item>
    <item
      aria-selected="false"
      class="relative"
      data-path="2"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        c
      </p>
      <!---->
      
      <!---->
    </item>
    
  </toggle-switch>
  
  
</div>
`;

exports[`Switch.svelte > should render using default field mapping 1`] = `
<div>
  <!---->
  <toggle-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="flex items-center "
    role="listbox"
    tabindex="0"
  >
    <item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
      <!---->
      
      
      <!---->
       
      <p>
        a
      </p>
      <!---->
      
      <!---->
    </item>
    <item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
      <!---->
      
      
      <!---->
       
      <p>
        b
      </p>
      <!---->
      
      <!---->
    </item>
    
  </toggle-switch>
  
  
</div>
`;

exports[`Switch.svelte > should render with value 1`] = `
<div>
  <!---->
  <toggle-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="flex items-center is-on"
    role="listbox"
    tabindex="0"
  >
    <item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </item>
    <item
      aria-selected="true"
      class="relative"
      data-path="1"
      role="option"
    >
      <indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </item>
    
  </toggle-switch>
  
  
</div>
`;

exports[`Switch.svelte > should support editable attribute 1`] = `
<div>
  <!---->
  <toggle-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="flex items-center "
    role="listbox"
    tabindex="0"
  >
    <item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        a
      </p>
      <!---->
      
      <!---->
    </item>
    <item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        b
      </p>
      <!---->
      
      <!---->
    </item>
    
  </toggle-switch>
  
  
</div>
`;

exports[`Switch.svelte > should support editable attribute 2`] = `
<div>
  <!---->
  <toggle-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="flex items-center "
    role="listbox"
    tabindex="0"
  >
    <item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        a
      </p>
      <!---->
      
      <!---->
    </item>
    <item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
      <!---->
      <!---->
       
      <p>
        b
      </p>
      <!---->
      
      <!---->
    </item>
    
  </toggle-switch>
  
  
</div>
`;
